@@ -3,7 +3,8 @@ Package: aroma.core
 
 Version: 2.4.8 [2012-03-01]
 o GENERALIZATION: Now RawGenomicSignals inherits from data.frame
-  instead of Object.
+  instead of Object.  It works with the big aroma.affymetrix test
+  suite as well as with the TCGA vignette (of aroma.cn.eval).
 
 
 Version: 2.4.7 [2012-03-01]
